# mujoco_w05

./: CMakeLists.txt  README.md
assets/: doublependulum.xml
include/: swing_controller.h
src/: main.cpp  swing_controller.cpp
